--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
       </div>
     </dialog>
   </div>
+  <div class="exercise-3 box">
+    <nav class="dropdown">
+      <button class="dropbtn">MENU</button>
+      <div class="dropdown-menu">
+        <div class="menu-item"><span>ITEM 1</span></div>
+        <div class="menu-item"><span>ITEM 2</span></div>
+        <div class="menu-item"><span>ITEM 3</span></div>
+        <div class="menu-item"><span>ITEM 4</span></div>
+        <div class="menu-item"><span>ITEM 5</span></div>
+      </div>
+    </nav>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
